[package]
name = "Daily-Programmer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossterm = "0.21.0"
curl = "0.4.38"
rand = "0.8.4"
serde_json = "1.0.68"
strip_markdown = "0.2.0"
